# Lab_04

./: README.md
.gihub/workflows/: CI.yml
.github/workflows/: CI.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world/: CMakeLists.txt
solver_app/: CMakeLists.txt
solver_app/src/: equation.cpp
solver_lib/: CMakeLists.txt
