cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
project(hello_world)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib formatter_ex_lib_dir) 
add_executable(hello_world ${CMAKE_CURRENT_SOURCE_DIR}/src/hello_world.cpp) 
target_include_directories(hello_world PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib/src) 
target_link_libraries(hello_world formatter_ex_lib)